[gd_scene load_steps=14 format=3 uid="uid://diyjuq1yqgvwi"]

[ext_resource type="Script" uid="uid://bdnfbyqcgsjwx" path="res://player.gd" id="1_4flbx"]
[ext_resource type="AudioStream" uid="uid://k3xxnpqhjieo" path="res://SFX - Death Explosion.ogg" id="2_onrkg"]
[ext_resource type="AudioStream" uid="uid://bcfguwdrupu88" path="res://SFX - Success.ogg" id="3_i3pqv"]
[ext_resource type="AudioStream" uid="uid://dc80mxerccdfg" path="res://SFX - Main engine thrust.ogg" id="4_hqtel"]
[ext_resource type="PackedScene" uid="uid://ux6ivcx1ovdp" path="res://Particles/booster_particles.tscn" id="5_sweqy"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Particles/success_particles.tscn" id="6_1jxqw"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Particles/explosion_particles.tscn" id="7_dw050"]
[ext_resource type="Material" uid="uid://dqggdinjoqi0e" path="res://ShipRedMaterial.tres" id="8_dw050"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4flbx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_1jxqw"]
top_radius = 0.2
bottom_radius = 0.2

[sub_resource type="CylinderMesh" id="CylinderMesh_hqtel"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="TorusMesh" id="TorusMesh_dw050"]

[sub_resource type="PrismMesh" id="PrismMesh_b26j0"]
size = Vector3(1, 1, 0.01)

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_4flbx")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_onrkg")

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i3pqv")

[node name="ThrustAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hqtel")

[node name="BoosterParticles" parent="." instance=ExtResource("5_sweqy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="RightBoosterParticles" parent="." instance=ExtResource("5_sweqy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -1, 0)

[node name="LeftBoosterParticles" parent="." instance=ExtResource("5_sweqy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -1, 0)

[node name="SuccessParticles" parent="." instance=ExtResource("6_1jxqw")]

[node name="ExplosionParticles" parent="." instance=ExtResource("7_dw050")]

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.790899, 0, 0, 0, 1, -0.00635033, -0.199668, -0.00231767)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_1jxqw")

[node name="cockpit" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.001, 1.25, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_hqtel")
skeleton = NodePath("../..")

[node name="Body2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.620073, 0.0465291, 0, -0.0691578, 0.417182, 0, 0, 0, 0.623917, -0.3, -0.55, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_1jxqw")
skeleton = NodePath("../..")

[node name="cockpit2" type="MeshInstance3D" parent="Body/Body2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.001, 1.25, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_hqtel")
skeleton = NodePath("../../..")

[node name="Body3" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.620029, -0.0467912, 0, 0.0695474, 0.417153, 0, 0, 0, 0.623917, 0.3, -0.55, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_1jxqw")
skeleton = NodePath("../..")

[node name="cockpit2" type="MeshInstance3D" parent="Body/Body3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.001, 1.25, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_hqtel")
skeleton = NodePath("../../..")

[node name="ring" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.232591, 0, 0, 0, 0.232591, 0, 0, 0, 0.232591, 0, 0.609191, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("TorusMesh_dw050")

[node name="ring2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.206675, 0, 0, 0, 0.206675, 0, 0, 0, 0.206675, 0, 1.01199, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("TorusMesh_dw050")

[node name="triangle" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.178986, -0.103337, 0, 0.103337, 0.178986, 0, 0, 0, 0.206675, 0.230243, 0.871815, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("PrismMesh_b26j0")
skeleton = NodePath("../ring2")

[node name="triangle2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.178986, 0.103337, 0, -0.103337, 0.178986, 0, 0, 0, 0.206675, -0.242003, 0.871815, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("PrismMesh_b26j0")
skeleton = NodePath("../ring2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
